# computercompanion

./: README.md  main.py  pyproject.toml
computercompanion/: main.py
computercompanion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
computercompanion/data/: test.txt
