[project]
name = "computercompanion"
version = "1.1.0"
description = "A python based friendly assistant filled with tools"
authors = [{ name = "Charlie Lindsay" }]
requires-python = ">=3.8"
dependencies = [
    "pythonping",
    "psutil",
]

[project.scripts]
computercompanion = "computercompanion.main:run"

[tool.setuptools]
packages = ["computercompanion"]

[tool.setuptools.package-data]
computercompanion = ["data/*"]
